--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,16 @@ node_modules
 
 lib/
 data/
+
+#dist folder
+dist
+
+# IDEA/Webstorm project files
+.idea
+*.iml
+
+#VSCode metadata
+.vscode
+
+# Mac files
+.DS_Store
