--- a/client/package.json
+++ b/client/package.json
@@ -30,7 +30,9 @@
   "author": "Amaury Martiny",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^3.3.7",
     "react": "15.4.1",
+    "react-bootstrap": "^0.30.7",
     "react-dom": "15.4.1",
     "react-redux": "5.0.1",
     "react-router": "3.0.0",
