--- a/client/package.json
+++ b/client/package.json
@@ -38,6 +38,7 @@
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
     "redux": "3.6.0",
+    "redux-logger": "^2.8.2",
     "redux-thunk": "2.1.0"
   },
   "devDependencies": {
@@ -77,7 +78,7 @@
     "postcss-loader": "1.2.1",
     "prompt": "1.0.0",
     "react-addons-test-utils": "15.4.1",
-    "redux-immutable-state-invariant": "1.2.4",
+    "redux-immutable-state-invariant": "^1.2.4",
     "replace": "0.3.0",
     "rimraf": "2.5.4",
     "sass-loader": "4.1.0",
