--- a/client/package.json
+++ b/client/package.json
@@ -41,6 +41,7 @@
     "react-router-redux": "4.0.7",
     "redux": "3.6.0",
     "redux-actions": "^2.0.1",
+    "redux-form": "^6.5.0",
     "redux-logger": "^2.8.2",
     "redux-thunk": "2.1.0"
   },
