--- a/client/package.json
+++ b/client/package.json
@@ -56,9 +56,11 @@
     "babel-plugin-transform-react-constant-elements": "6.9.1",
     "babel-plugin-transform-react-remove-prop-types": "0.2.11",
     "babel-polyfill": "6.20.0",
+    "babel-preset-es2015": "6.22.0",
     "babel-preset-latest": "6.16.0",
     "babel-preset-react": "6.16.0",
     "babel-preset-react-hmre": "1.1.1",
+    "babel-preset-stage-0": "6.22.0",
     "babel-preset-stage-1": "6.16.0",
     "browser-sync": "2.18.5",
     "chalk": "1.1.3",
