--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "redux": "3.6.0",
     "redux-actions": "^2.0.1",
     "redux-form": "^6.5.0",
+    "redux-localstorage": "^0.4.1",
     "redux-logger": "^2.8.2",
     "redux-saga": "^0.14.3",
     "redux-thunk": "2.1.0"
