--- a/client/package.json
+++ b/client/package.json
@@ -33,8 +33,10 @@
     "bootstrap": "^3.3.7",
     "feathers-client": "^1.9.0",
     "feathers-reduxify-authentication": "^0.1.1",
+    "moment": "^2.17.1",
     "react": "15.4.1",
     "react-bootstrap": "^0.30.7",
+    "react-datetime": "^2.8.8",
     "react-dom": "15.4.1",
     "react-redux": "5.0.1",
     "react-router": "3.0.0",
