--- a/client/package.json
+++ b/client/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^3.3.7",
     "feathers-client": "^1.9.0",
     "feathers-reduxify-authentication": "^0.1.1",
+    "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "react": "15.4.1",
     "react-bootstrap": "^0.30.7",
