--- a/client/package.json
+++ b/client/package.json
@@ -47,8 +47,7 @@
     "redux-form": "^6.5.0",
     "redux-localstorage": "^0.4.1",
     "redux-logger": "^2.8.2",
-    "redux-saga": "^0.14.3",
-    "redux-thunk": "2.1.0"
+    "redux-saga": "^0.14.3"
   },
   "devDependencies": {
     "autoprefixer": "6.5.4",
