Seed an admin and a manager into the database

--- a/server/package.json
+++ b/server/package.json
@@ -31,6 +31,7 @@
     "feathers-errors": "^2.5.0",
     "feathers-hooks": "^1.7.1",
     "feathers-rest": "^1.6.0",
+    "feathers-seeder": "^1.0.7",
     "feathers-sequelize": "^1.4.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
