--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,7 @@
     "feathers-configuration": "^0.3.3",
     "feathers-errors": "^2.5.0",
     "feathers-hooks": "^1.7.1",
+    "feathers-hooks-common": "^2.0.3",
     "feathers-rest": "^1.6.0",
     "feathers-seeder": "^1.0.7",
     "feathers-sequelize": "^1.4.0",
